<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ fragment_placemark_dialog.xml
  ~ Created by G.Capelli on 8/6/2016
  ~ This file is part of BasicAirData GPS Logger
  ~
  ~ Copyright (C) 2011 BasicAirData
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <EditText
                    android:id="@+id/film_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/film_data_hint"
                    android:inputType="textCapSentences"
                    android:nextFocusDown="@id/pdata_speed"
                    android:nextFocusForward="@id/pdata_speed"
                    android:nextFocusLeft="@id/pdata_speed">

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <RadioGroup
                    android:id="@+id/rg_zs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_zs_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs0" />

                    <RadioButton
                        android:id="@+id/rb_zs_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs1" />

                    <RadioButton
                        android:id="@+id/rb_zs_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs2" />

                    <RadioButton
                        android:id="@+id/rb_zs_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs3" />

                    <RadioButton
                        android:id="@+id/rb_zs_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:checked="false"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs4" />

                    <RadioButton
                        android:id="@+id/rb_zs_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:checked="false"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs5" />

                    <RadioButton
                        android:id="@+id/rb_zs_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs6" />

                    <RadioButton
                        android:id="@+id/rb_zs_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs7" />

                    <RadioButton
                        android:id="@+id/rb_zs_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs8" />

                    <RadioButton
                        android:id="@+id/rb_zs_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs9" />

                    <RadioButton
                        android:id="@+id/rb_zs_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableBottom="@drawable/my_btn_radio_anim"
                        android:gravity="center_horizontal"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/dphoto_zs10" />
                </RadioGroup>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <TextView
                    android:id="@+id/textViewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dphoto_speed" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dphoto_ev" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dphoto_fv" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dphoto_tv" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dphoto_av" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <EditText
                    android:id="@+id/pdata_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:inputType="number"
                    android:nextFocusLeft="@id/pdata_ev"
                    android:nextFocusForward="@id/pdata_ev"
                    android:nextFocusDown="@id/pdata_ev">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/pdata_ev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:inputType="number"
                    android:nextFocusLeft="@id/pdata_fv"
                    android:nextFocusForward="@id/pdata_fv"
                    android:nextFocusDown="@id/pdata_fv">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/pdata_fv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/pdata_tv"
                    android:nextFocusForward="@id/pdata_tv"
                    android:nextFocusLeft="@id/pdata_tv">

                    <requestFocus />
                </EditText>
                <EditText
                    android:id="@+id/pdata_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:inputType="number|phone"
                    android:nextFocusDown="@id/pdata_av"
                    android:nextFocusForward="@id/pdata_av"
                    android:nextFocusLeft="@id/pdata_av">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/pdata_av"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/placemark_description"
                    android:nextFocusForward="@id/placemark_description"
                    android:nextFocusLeft="@id/placemark_description">

                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <EditText
                    android:id="@+id/placemark_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/dlg_enter_the_description"
                    android:inputType="textCapSentences"
                    android:nextFocusLeft="@id/pdata_speed"
                    android:nextFocusForward="@id/pdata_speed"
                    android:nextFocusDown="@id/pdata_speed">

                    <requestFocus />
                </EditText>
            </TableRow>

        </TableLayout>

    </LinearLayout>
</RelativeLayout>
